# sdk-python

./: README.md  pyproject.toml
tests/: test_sdk_live.py
verda/: __init__.py  client.py  models.py
