[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verda-watermark"
version = "0.3.2"
description = "Python SDK for the Verda Enterprise Watermarking API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Verda AI", email = "support@verda.ai"}]
keywords = ["watermark", "watermarking", "content-protection", "verda", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://verda.ai"
Documentation = "https://enterprise.verda.ai/api-docs"
Repository = "https://github.com/VerdaAI/sdk-python"

[tool.setuptools.packages.find]
include = ["verda*"]
